browse event page

--- a/Admin_panel/package.json
+++ b/Admin_panel/package.json
@@ -20,9 +20,13 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "google-static-maps-styler-query": "^4.0.0",
+    "handlebars-dateformat": "^1.1.1",
+    "handlebars-helper-equal": "^1.0.0",
+    "handlebars-helper-repeat": "^2.0.0",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
