--- a/Admin_panel/.env
+++ b/Admin_panel/.env
@@ -1,4 +1,7 @@
-MONGO_ATLAS_USERNAME = solomons_pools 
+MONGO_ATLAS_USERNAME = solomons_pools
 MONGO_ATLAS_PW = t0XEJRZIM9a5vZDL
 MONGO_ATLAS_DBNAME = solomons_pools
 TOKEN_SECRET = solomons_pools
+CLOUD_NAME = dh5h1uefe
+CLOUD_KEY = 458626838962884
+CLOUD_SECRET = 0-oqkWLclnX7jJjlfertutrE5sg
