--- a/Admin_panel/package.json
+++ b/Admin_panel/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,6 +20,7 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "google-static-maps-styler-query": "^4.0.0",
     "handlebars-dateformat": "^1.1.1",
     "handlebars-helper-equal": "^1.0.0",
@@ -28,6 +30,7 @@
     "mongoose": "^5.10.13",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "static-google-map": "0.0.3",
