--- a/solomons_pools_flutter/android/app/src/main/AndroidManifest.xml
+++ b/solomons_pools_flutter/android/app/src/main/AndroidManifest.xml
@@ -5,10 +5,13 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="solomons_pools_flutter"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyAu0YZdP2oU4yz8bxkO0PiADx2YFuQia3s"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
