--- a/solomons_pools_flutter/pubspec.yaml
+++ b/solomons_pools_flutter/pubspec.yaml
@@ -28,6 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  mongo_dart: ^0.4.4
+  geolocator: ^6.1.4
+  provider: ^4.3.2+2
+  google_maps_flutter: ^1.0.6
+  toast: ^0.1.5
+  flutter_easyloading: ^2.1.3
+  google_fonts_arabic: ^1.1.7
 
 dev_dependencies:
   flutter_test:
