--- a/solomons_pools_flutter/pubspec.yaml
+++ b/solomons_pools_flutter/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^0.18.0
   google_fonts_arabic: ^1.1.7
-  
+  flutter_swiper: ^1.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
