--- a/solomons_pools_flutter/pubspec.yaml
+++ b/solomons_pools_flutter/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_fonts_arabic: ^1.1.7
   flutter_swiper: ^1.1.6
   mongo_dart: ^0.4.4
+  flare_splash_screen: ^2.0.1+2
 
 
   # The following adds the Cupertino Icons font to your application.
