--- a/solomons_pools_flutter/pubspec.yaml
+++ b/solomons_pools_flutter/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   mongo_dart: ^0.4.4
   flare_splash_screen: ^2.0.1+2
+  provider: ^4.3.2+2
 
 
   # The following adds the Cupertino Icons font to your application.
