--- a/solomons_pools_flutter/pubspec.yaml
+++ b/solomons_pools_flutter/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   mongo_dart: ^0.4.4
   flare_splash_screen: ^2.0.1+2
   provider: ^4.3.2+2
+  google_maps_flutter:
 
 
   # The following adds the Cupertino Icons font to your application.
