--- a/solomons_pools_flutter/pubspec.yaml
+++ b/solomons_pools_flutter/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   modal_bottom_sheet: ^1.0.0+1
   geolocator: ^6.1.4
   carousel_slider: ^2.3.1
+  flip_card: ^0.4.4
+  
 
 
   # The following adds the Cupertino Icons font to your application.
